fix some visual issues on mobile #664

--- a/web/themes/quartiers_solidaires/assets/components/atoms/button/button.scss
+++ b/web/themes/quartiers_solidaires/assets/components/atoms/button/button.scss
@@ -20,6 +20,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  max-width: 100%;
 
   @include hover {
     cursor: pointer;
